Bug 1416015 - Ensure SurfaceTexture desctruction happens correctly r=jnicol

MozReview-Commit-ID: I4X1jQQC7ry